5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1635_2447.log
== TEST (2019-04-14 21:54:53) 
-- CODE:
preco= float(input("preco:"))
valor= float(input("DINHEIRO:"))
X= preco
Y= valor
if(X>Y):
	print("Falta"X-Y)
if(X<Y):
	print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    print("Falta"X-Y)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:55:39) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
if(X<Y):
	print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(X<Y):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:55:51) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			if(X<Y):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(X<Y):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:55:58) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
if(X<Y):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(X<Y):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:56:20) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
if(Y>X):
	print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:56:22) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
if(Y>X):
	print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:58:40) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
else(Y>X):
	print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    else(Y>X):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:58:51) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
if(Y>X):
	print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:58:53) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
if(Y>X):
	print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:58:58) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
if(Y>X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:59:04) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			if(Y>X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:59:10) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			if(Y>X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:59:11) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			if(Y>X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:59:16) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			if(Y>X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:59:33) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			if(Y>X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:59:39) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			if(Y>X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:59:50) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			if(Y >X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y >X):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:00:00) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			if( Y > X ):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if( Y > X ):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:00:11) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			if (Y> X):
			print("Troco"X-Y)
-- EXECUTION TIME:
0.128501
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 6
    if (Y> X):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:00:15) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			if (Y> X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if (Y> X):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:00:39) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			if(Y>X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:00:51) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
if(Y>X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:00:54) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
if(Y>X):
print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:00:57) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
if(Y>X):
 print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:00:59) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
if(Y>X):
  print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:01:00) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
if(Y>X):
   print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:01:02) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
 if(Y>X):
   print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:01:05) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
  if(Y>X):
   print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:01:09) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)

			if(Y>X):
   print("Troco"X-Y)
-- ERROR:
File "XXXX", line 7
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:01:25) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)

if(Y>X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 7
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:01:34) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)

			if(Y>X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 7
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:01:40) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)

			if(Y>X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 7
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:01:48) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)

			if(Y>X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 7
    if(Y>X):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:03:23) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)

			if(Y>=X):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 7
    if(Y>=X):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:03:52) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			else:
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:04:05) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
else:
    print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:04:15) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
                                     else:
    print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:05:19) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			else:
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:05:28) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			else():
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    else():
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:07:30) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
	
			if(X<Y):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 7
    if(X<Y):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:07:31) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
	
			if(X<Y):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 7
    if(X<Y):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:43:42) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			if(X<Y):
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    if(X<Y):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:44:15) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			
else(X<Y):
	print("Troco"X-Y)
-- ERROR:
File "XXXX", line 7
    else(X<Y):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:44:23) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
else(X<Y):
	print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    else(X<Y):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:44:33) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
else:
	print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:44:39) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
else:
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:44:43) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			else:
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:44:46) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y)
			else:
			print("Troco"X-Y)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:41:31) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y))
			else:
			print("Troco"(X-Y))
-- ERROR:
File "XXXX", line 6
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:41:36) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y))
else:
	print("Troco"(X-Y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Falta"(X-Y))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:42:39) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y))
else:
	print("Troco"X-Y)
-- ERROR:
File "XXXX", line 7
    print("Troco"X-Y)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:42:48) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y))
else:
	print("Troco"(X-Y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Falta"(X-Y))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:43:30) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y))
if(Y>X):
	print("Troco"(X-Y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Falta"(X-Y))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:44:00) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y))
if(Y>X):
	print("Troco"(X-Y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Falta"(X-Y))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:54:57) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y))
if(Y>X):
	print(ROUND("Troco"(X-Y),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Falta"(X-Y))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:55:01) 
-- CODE:
X= float(input("preco:"))
Y= float(input("DINHEIRO:"))

if(X>Y):
	print("Falta"(X-Y))
if(Y>X):
	print(ROUND("Troco"(X-Y),2))
-- EXECUTION TIME:
0.202651
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 5, in <module>
    print("Falta"(X-Y))
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
